Try with a fix to stop bouncing width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,15 @@
  * ---------------------------------------------- 
  */
 
-html {
-  height: 100%;
-  position: relative;
+html,
+body {
+  position: fixed;
   overflow: hidden;
   max-width: 100%;
   max-height: 100%;
+  height: 100%;
   margin: 0px;
   padding: 0px;
-}
-
-body {
-  height  : 100%;
-  overflow: auto;
-  position: relative;
-  margin: 0;
-  padding: 0;
 }
 
 main {
